# GerenciadorDeTarefas

./: main.py
GerenciadorDeTarefas/: CMakeLists.txt  main.cpp  mainwindow.h  mainwindow.ui
GerenciadorDeTarefas/AbsClasses/: Commands.h
GerenciadorDeTarefas/Configs/: env.json
GerenciadorDeTarefas/CustomElements/: CustomPlainText.h
GerenciadorDeTarefas/windowscore/: mainwinos.cpp  mainwinos.h
GerenciadorDeTarefas/windowscore/CommandsClasses/: cd.h
GerenciadorDeTarefas/windowscore/EnvVaribles/: env_vars.cpp  env_vars.h
GerenciadorDeTarefas/windowscore/FileTree/: FileTree.cpp  FileTree.h
GerenciadorDeTarefas/windowscore/StringTools/: stringtools.cpp  stringtools.h
GerenciadorDeTarefas/windowscore/pathmanager/: pathmanager.cpp  pathmanager.h
MyConsole/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h
MyConsole/AbsClasses/: thread_header.h
MyConsole/windowscore/: mainwinos.cpp  mainwinos.h
MyConsole/windowscore/CommandsClasses/: cd.h
MyConsole/windowscore/EnvVaribles/: env_vars.cpp  env_vars.h
MyConsole/windowscore/StringTools/: stringtools.h
build-GerenciadorDeTarefas-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-GerenciadorDeTarefas-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-GerenciadorDeTarefas-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-GerenciadorDeTarefas-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/GerenciadorDeTarefas_autogen/: deps
build-GerenciadorDeTarefas-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/GerenciadorDeTarefas_autogen/4T3LKQKHOM/: moc_thread_header.cpp  moc_thread_header.cpp.d
build-GerenciadorDeTarefas-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/GerenciadorDeTarefas_autogen/EWIEGA46WW/: moc_mainwindow.cpp.d
build-GerenciadorDeTarefas-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/GerenciadorDeTarefas_autogen/ZAU5VBWYSH/: moc_cd.cpp  moc_cd.cpp.d
build-GerenciadorDeTarefas-Desktop_Qt_6_6_0_MinGW_64_bit-Release/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  qtcsettings.cmake
build-GerenciadorDeTarefas-Desktop_Qt_6_6_0_MinGW_64_bit-Release/.qt/: QtDeploySupport.cmake
build-GerenciadorDeTarefas-Desktop_Qt_6_6_0_MinGW_64_bit-Release/.qtc_clangd/: compile_commands.json
build-GerenciadorDeTarefas-Desktop_Qt_6_6_0_MinGW_64_bit-Release/GerenciadorDeTarefas_autogen/: deps
build-GerenciadorDeTarefas-Desktop_Qt_6_6_0_MinGW_64_bit-Release/GerenciadorDeTarefas_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-GerenciadorDeTarefas-Desktop_Qt_6_6_0_MinGW_64_bit-Release/GerenciadorDeTarefas_autogen/include/: ui_mainwindow.h
build-MyConsole-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/: .ninja_deps  .ninja_log  CMakeCache.txt.prev  build.ninja  cmake_install.cmake
build-MyConsole-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qt/: QtDeploySupport.cmake
build-MyConsole-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/.qtc_clangd/: compile_commands.json
build-MyConsole-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/MyConsole_autogen/: deps  mocs_compilation.cpp
build-MyConsole-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/MyConsole_autogen/4T3LKQKHOM/: moc_thread_header.cpp  moc_thread_header.cpp.d
build-MyConsole-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/MyConsole_autogen/EWIEGA46WW/: moc_mainwindow.cpp  moc_mainwindow.cpp.d
build-MyConsole-Desktop_Qt_6_6_0_MinGW_64_bit-Debug/MyConsole_autogen/ZAU5VBWYSH/: moc_cd.cpp  moc_cd.cpp.d
(+300 files in other folders)
